/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.mycompany.eva2_6_clases_abstractas;

/**
 *
 * @author jesus
 */
public class EVA2_6_CLASES_ABSTRACTAS {

    public static void main(String[] args) {
        Rectangulo rec=new Rectangulo(5,10);
        rec.mostrarDatos();
        Circulo cir=new Circulo(10);
        cir.mostrarDatos();
    }
}
